test/loop/confidence/errors/verify_error_1.loop
# Scope resolution error for function call

scan(ls) =>
  []                    : []
  [x]       | x < 10    : [x]
            | x > 10    : [10]
  [x:xs]                : scan(xs) + x

main ->
  sclan([100,2,3])
